fix: cancelled rows alignment issue in safari fix: keep date get argument when searching or clicking on links, so the date isn't reset

--- a/plan/static/style.css
+++ b/plan/static/style.css
@@ -2,6 +2,10 @@ html {
     overflow-y: scroll;
 }
 
+main.container {
+    padding: 0 1rem;
+}
+
 .red {
     color: red !important;
 }
@@ -60,6 +64,7 @@ td a, th a {
 }
 
 table {
+    table-layout: fixed;
     border-collapse: collapse;
     width: 100%;
 }
